# pb-CsoundApi

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CsoundTest.cpp  CsoundTest.h  Info-CsoundTest__Upgraded_.plist  Makefile  README.md  SDKExampleMain.cpp  cmake_install.cmake  test8.csd
CsoundTest.bundle/Contents/: Info.plist
CsoundTest.bundle/Contents/MacOS/: CsoundTest
CsoundTest.bundle/Contents/Resources/en.lproj/: InfoPlist.strings
CsoundTest.xcodeproj/: project.pbxproj
CsoundTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CsoundTest.xcodeproj/project.xcworkspace/xcuserdata/boonier.xcuserdatad/: UserInterfaceState.xcuserstate
CsoundTest.xcodeproj/xcuserdata/boonier.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
CsoundTest.xcodeproj/xcuserdata/boonier.xcuserdatad/xcschemes/: CsoundTest.xcscheme  xcschememanagement.plist
